--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon src/index"
   },
   "repository": {
     "type": "git",
@@ -19,5 +19,14 @@
   "bugs": {
     "url": "https://github.com/realshaunoneill/ChatManager/issues"
   },
-  "homepage": "https://github.com/realshaunoneill/ChatManager#readme"
+  "homepage": "https://github.com/realshaunoneill/ChatManager#readme",
+  "dependencies": {
+    "didyoumean": "^1.2.1",
+    "discord.js": "^12.2.0",
+    "dotenv": "^8.2.0",
+    "winston": "^3.2.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.3"
+  }
 }
